--- a/qdiagramdraw/diagramwindow.ui
+++ b/qdiagramdraw/diagramwindow.ui
@@ -17,12 +17,33 @@
    <property name="margin">
     <number>0</number>
    </property>
-   <item row="0" column="0">
+   <item row="0" column="0" rowspan="2">
     <widget class="QDiagramView" name="diagramView"/>
+   </item>
+   <item row="0" column="1">
+    <widget class="QDiagramPointerPushButton" name="pointerPushButton"/>
+   </item>
+   <item row="1" column="1">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>QDiagramPointerPushButton</class>
+   <extends>QPushButton</extends>
+   <header>qdiagrampointerpushbutton.h</header>
+  </customwidget>
   <customwidget>
    <class>QDiagramView</class>
    <extends>QWidget</extends>
@@ -31,5 +52,38 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pointerPushButton</sender>
+   <signal>modeChanged(QDiagramToolkit::PointerMode)</signal>
+   <receiver>diagramView</receiver>
+   <slot>setMode(QDiagramToolkit::PointerMode)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>387</x>
+     <y>10</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>354</x>
+     <y>73</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pointerPushButton</sender>
+   <signal>connectorStyleChanged(QDiagramConnectorStyle)</signal>
+   <receiver>diagramView</receiver>
+   <slot>setConnectorStyle(QDiagramConnectorStyle)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>375</x>
+     <y>11</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>315</x>
+     <y>42</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
