--- a/qdiagramdraw/mainwindow.ui
+++ b/qdiagramdraw/mainwindow.ui
@@ -182,6 +182,20 @@
    </attribute>
    <widget class="QDiagramLayersView" name="layersView"/>
   </widget>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="textBoldAction"/>
+   <addaction name="textItalicAction"/>
+   <addaction name="textUnderlineAction"/>
+  </widget>
   <action name="exitAction">
    <property name="text">
     <string>&amp;Exit</string>
@@ -470,6 +484,36 @@
   <action name="deletePageAction">
    <property name="text">
     <string>Delete</string>
+   </property>
+  </action>
+  <action name="textBoldAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="qdiagramdraw.qrc">
+     <normaloff>:/qdiagramdraw/text.bold</normaloff>:/qdiagramdraw/text.bold</iconset>
+   </property>
+   <property name="text">
+    <string>Bold</string>
+   </property>
+  </action>
+  <action name="textItalicAction">
+   <property name="icon">
+    <iconset resource="qdiagramdraw.qrc">
+     <normaloff>:/qdiagramdraw/text.italic</normaloff>:/qdiagramdraw/text.italic</iconset>
+   </property>
+   <property name="text">
+    <string>Italic</string>
+   </property>
+  </action>
+  <action name="textUnderlineAction">
+   <property name="icon">
+    <iconset resource="qdiagramdraw.qrc">
+     <normaloff>:/qdiagramdraw/text.underline</normaloff>:/qdiagramdraw/text.underline</iconset>
+   </property>
+   <property name="text">
+    <string>Underline</string>
    </property>
   </action>
  </widget>
@@ -904,6 +948,54 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>textBoldAction</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>textBoldActionTriggered()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>602</x>
+     <y>382</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>textItalicAction</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>textItalicActionTriggered()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>602</x>
+     <y>382</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>textUnderlineAction</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>textUnderlineActionTriggered()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>602</x>
+     <y>382</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>saveActionTriggered()</slot>
@@ -927,5 +1019,8 @@
   <slot>groupActionTriggered()</slot>
   <slot>ungroupActionTriggered()</slot>
   <slot>insertPageActionTriggered()</slot>
+  <slot>textBoldActionTriggered()</slot>
+  <slot>textItalicActionTriggered()</slot>
+  <slot>textUnderlineActionTriggered()</slot>
  </slots>
 </ui>
